--- a/src/Feed/Job.css
+++ b/src/Feed/Job.css
@@ -4,7 +4,7 @@
     border-radius: 17px;
     width: 60%;
     color: white;
-    height: 100px;
+    height: 170px;
     display: flex;
     justify-content: space-between
 
